# meabench

./: .bzrignore  .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.base  Makefile.gui  Makefile.in  Makefile.moc  Makefile.tools  NEWS  README.md  announce.txt  bootstrap  config.h.in  config.pri  configure  configure.in  meabench.pro  version.h
60hz/: 60hz.C  60hz.pro  Defs.H  Fragment60.C  LockIn.H  Makefile.am  Makefile.in  TemplFlt.H  posthoc60hz.C
MCCard-linux-2.4/: AUTHOR  Amcc.h  MCCard.c  MCCard.h  Makefile.am  Makefile.in  rawread.c
MCCard-linux-2.6/: ChangeLog  INSTALL  Kbuild  MCCard.h  MCCard26.c  MCCard26nodev.c  Makefile.am  Makefile.in  README  TODO  whatfuncs.h.in
artifilt/: LocalFit.C  LocalFit.H  Makefile.in  posthocartifilt.C  salpa.C  salpa.pro
base/: Cmdr.C  Cmdr.H  CorrelData.H  Foreach.H  Linebuf.C  Makefile.am  Makefile.in  SFACli.H  SFCVoid.H  SFCli.H  SFFreeze.H  SFHeader.H  ShmCli.C  ShmCli.H  ShmSrv.H  Sigint.C  Sigint.H  Sockclient.C  Sockclient.H  Sockserver.C  Sockserver.H  Sprintf.C  Variance.H  WakeupCli.H  WakeupCodes.H  base.pro  dbx.C  dbx.H  doubletime.H  stringperror.C
buildscripts/: install.sh  makemea
common/: AutoType.H  ChannelNrs.H  Config.H  EasyClient.H  EventStream.H  MEAB.H  MEABDefs.H  Makefile.am  Makefile.in  MedianVariance.H  MultiFile.H  SFAux.H  Types.H  meabench.pri
doc/: Makefile  Makefile.am  Makefile.in  matlab.tex  userguide.tex
driver/: meabench_mcs.h
driver/MCCard-linux-2.4/: INSTALL  README  TODO  hardrelease.C
driver/MCCard-linux-2.6/: MCCard-linux-2.6.pro  MCCard.h  forcefifo.C  rawread.c
driver/pdmeata/: testindma.C  testrun.C
extractwindow/: Makefile.am  Makefile.in  extractwindow.C
flexraster/: ContPanel.C  ContRaster.C  ControlPanel.C  ControlPanel.H  GridPanel.C  GridPanel.H  LinePanel.C  LinePanel.H  Makefile.am  Makefile.in  OnePanel.C  OnePanel.H  RD_Rec.C  RD_Rec.H  RD_Stim.C  RD_Stim.H  RasterData.C  RasterData.H  Scrollbar.C  SimpleRaster.C  SimpleRaster.H  Storage.C  Storage.H  controlpanel.ui  flexraster.C
gui/: ChannelSpin.C  ChannelSpin.H  JNMEA.H  Makefile.am  Makefile.in  QCorrels.C  QCorrels.H  QGraph.C  QGraph.H  QHisto.C  QHisto.H  QMultiGraph.C  QMultiGraph.H  gui.pri
matlab/: Makefile.am  Makefile.in  burstdet_timeclust.m  cr2hw.m  hist2d.m  loadraw.m  loadspike.m  loadspike_noc.m
monitor/: Makefile.am  Makefile.in  MeaMon.C  MeaMon.H  MonTable.C  MonTable.H  Monitor.C  Monitor.H  Monitor.ui  Progs.C  Progs.H  climon.C  climon.pro  meamon.pro  meamonmain.C  monitor.C  monitor.pro  monitor_gui.pro
neurosock/: ChangeLog  Defs.H  Error.H  FrameBuffer.C  FrameBuffer.H  Makefile.am  Makefile.in  Mutex.H  Neurosock.C  neurosock.C  srvMCMeata.C  srvMCMeata.H  srvMeata.H  srvPdMeata.C  srvPdMeata.H
pdmeata/: Makefile.am  Makefile.in  burntest.C  mapem.pl  pdmeata.c  pdmeata.h  pdmreset.c  testmmap.C  testwait.C
perl/: ChannelNrs.pm  Coproc.pm  Description.pm  Makefile.am  Makefile.in  burststats  bytrial  cleanctxt  cmdlog2html  commander  findburst  findprobetimes  ipcclean  mapprobetimes  rawsummary  reltime  resplitbytrial  spikefilter  spikesummary  splitburst  splitindivburst  widenbursts
raster/: AutoRaster.C  AutoRaster.H  AutoRaster.ui  AutoRaster.ui.h  Makefile.am  Makefile.in  MultiRasterBase.C  MultiRasterBase.H  OneRaster.C  OneRaster.H  OneRaster.ui  QAutoRaster.C  QAutoRaster.H  QMultiRaster.C  QMultiRaster.H  QRDispInfo.H  QRaster.C  QRaster.H  QSingleRaster.C  QSingleRaster.H  Raster.C  Raster.H  Raster.ui  SpikeBuffer.C  SpikeBuffer.H  autoraster.C  onerastermain.C  raster.C
rawsrv/: ChannelShift.C  Makefile.am  Makefile.in  RS_MCS.C  RS_MCS.H  RS_Sock.C  RS_Sock.H  RawSource.H  UEIConfig.H  nssrv.C  rawsrv.C
record/: Makefile.am  Makefile.in  Recorder.C  SourceSet.H  SpikeRecorder.C  record.C
replay/: Makefile.am  Makefile.in  RawReplay.C  ReplayBase.C  ReplayBase.H  replay.C
rms/: Defs.H  Makefile.am  Makefile.in  RMSAccum.H
scope/: FreezeInfo.C  FreezeInfo.H  Makefile.am  Makefile.in  QMultiScope.C  QMultiScope.H  QScope.C  QScope.H  Scope.C  Scope.H  Scope.ui  Scope.ui.h  scopemain.C  scrolltest.H
scripts/: Makefile.am  Makefile.in  manymea.in  mea.in
spikesound/: FrqStSound.C  Makefile.am  Makefile.in  Spikesound.H  spikesound.C
spikesrv/: AdaptiveThreshold.C  Butterworth.H  Exclude.H  IsClean.H  Makefile.am  Makefile.in  SD_AdaFlt_Detect.C  SD_AdaPerc.C  SD_AdaPerc_Detect.C  SD_BandFlt.C  SD_BandFlt_Detect.C  SD_Butter_Detect.C  SD_LimAda_Detect.C  SD_SNEO.H  SD_SNEO_Detect.C  SpikeDets.H  spikedet.C
src/: Makefile  meabench.pro
src/60hz/: 60hz.C  Fragment60.H  Makefile  Makefile.filter60hz  Makefile.posthoc60hz  TemplFlt.H  filter60hz.pro  posthoc60hz.pro
src/artifilt/: LocalFit.H  Makefile  Makefile.posthocartifilt  Makefile.salpa  artifilt.pro  posthocartifilt.pro
src/base/: Cmdr.C  Cmdr.H  CorrelData.H  Description.C  Description.H  Foreach.H  InputMUX.H  Linebuf.C  Linebuf.H  Makefile  SFACli.H  SFCVoid.H  SFCli.H  SFFreeze.H  SFSVoid.H  SFSrv.H  ShmCli.C  ShmCli.H  ShmSrv.C  ShmSrv.H  Sigint.C  Sigint.H  Sockclient.C  Sockclient.H  Sockserver.C  Sockserver.H  Sprintf.H  Stdin2Sock.H  Timeref.H  WakeupCli.C  WakeupCli.H  WakeupSrv.C  WakeupSrv.H  dbx.C  minmax.H  stringperror.H
src/common/: BufUseBackReport.H  ChannelNrs.H  CommonPath.H  Config.H  EasyClient.H  MEAB.H  MEABDefs.H  NoiseLevels.H  SFAux.H  directory.H  meabench.pri
src/driver/: MCCard.h.in
src/extractwindow/: Defs.H  Makefile  extractwindow.pro
src/flexraster/: ContPanel.H  ContRaster.H  ControlInfo.H  ControlPanel.C  LinePanel.C  Makefile  OnePanel.C  (+7 more)
tools/: Argh.C  Argh.H  Cumulate.H  ETA.H  Makefile.am  Makefile.in  MultiTimeQueue.H  SXCLog.C  SpikeQueue.H  SpikeXCorrel.H
utils/: DoubleCtxt.H  Makefile.am  Makefile.in  avgtrial.C  channelmean.C  context64.C  contextni.C  ctxt2ascii.C  detectclamped.C  doublectxt.C  getvar1c.C  killspchannel.C  noiseshape.C  onech_spike.C  onechannel.C  raw2one.C  rejoin.C  rms-rethresh.C  spikerate.C  spikesplit.C  spikexcor.C  stream2pipe.C  sxcl-invert.C  sxcl-table.C  sxclog.C  typesizes.C
(+317 files in other folders)
