# perl/Makefile.am: part of meabench, an MEA recording and analysis tool
# Copyright (C) 2000-2002  Daniel Wagenaar (wagenaar@caltech.edu)
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA


libexec_SCRIPTS = ChannelNrs.pm Description.pm Coproc.pm
noinst_HEADERS = burststats bytrial ChannelNrs.pm cleanctxt Description.pm findburst findprobetimes  mapprobetimes resplitbytrial spikefilter splitburst splitindivburst widenbursts Coproc.pm commander cmdlog2html spikesummary rawsummary reltime
bin_SCRIPTS = burststats bytrial cleanctxt \
	findburst findprobetimes mapprobetimes resplitbytrial \
	spikefilter splitburst splitindivburst widenbursts commander \
	cmdlog2html spikesummary rawsummary reltime
